--- a/lihp-vboly/pom.xml
+++ b/lihp-vboly/pom.xml
@@ -43,6 +43,18 @@
 			<artifactId>jdom</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.3.4</version>
+        <type>jar</type>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>4.3.2</version>
+        <type>jar</type>
+    </dependency>
 	</dependencies>
 
 	<build>
@@ -68,7 +80,7 @@
 				<executions>
 					<execution>
 						<id>copy</id>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
